[package]
name = "fastcgi"
version = "0.1.0"
edition = "2024"
authors = ["Lut99"]
repository = "https://github.com/Lut99/fastcgi-rs"
license = "Apache-2.0"
description = "A Rust implementation of the FastCGI process control protocol."


[[example]]
name = "php"
path = "examples/php/main.rs"
required-features = ["connection"]


[dependencies]
log = { version = "0.4.0", optional = true }
thiserror = "2.0.0"


[dev-dependencies]
clap = { version = "4.6.0", features = ["derive"] }
error-trace = "4.0.0"
humanlog = { git = "https://github.com/Lut99/humanlog-rs" }
log = "0.4.0"


[features]
default = ["connection"]

conn = ["connection"]
connection = []
log = ["dep:log"]
